2005-02-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e19.el: Autoload easymenu in order to avoid compile warning.
	* w3m-om.el: Ditto.

2005-02-26  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-heise.el (shimbun-heise-get-newsticker-headers): Replace
	'w3m-expand-url' to 'shimbun-expand-url'.
	(shimbun-heise-get-newsticker-headers): Ditto.

2005-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (all): Use `w3m-form-set-number' and
	`w3m-form-kill-buffer' instead of `w3m-form-textarea-set-number'
	and `w3m-form-textarea-kill-buffer'

	* w3m-form.el (w3m-form-input-select-urlid): New buffer local
	variable.
	(w3m-form-input-map-urlname): Ditto.
	(w3m-form-set-number): Rename from `w3m-form-textarea-set-number'
	and treate buffers of `select' and `map'.
	(w3m-form-kill-buffer): Ditto.
	(w3m-form-input-select-set): Allways remove own buffer.
	(w3m-form-input-select-exit): Ditto.
	(w3m-form-input-map-set): Ditto.
	(w3m-form-input-map-exit): Ditto.
	(w3m-form-input-select): When exists same from buffer, use it.
	(w3m-form-input-map): Ditto.

2005-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-what-where): Fix the form.
	(w3mhack-makeinfo): Silence it when formatting @multitable section.

2005-02-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (top): Add autoloads of `w3m-form-textarea-kill-buffer'
	and `w3m-form-textarea-set-number' to avoid byte-compile warnings.
	(w3m-delete-buffer): Call `w3m-form-textarea-kill-buffer' when use
	form.
	(w3m-delete-other-buffers): Ditto.
	(w3m-quit): Ditto.
	(w3m-select-buffer-delete-buffer): Ditto.
	(w3m-pack-buffer-numbers): Call `w3m-form-textarea-set-number'
	when use form.

	* w3m-form.el (top): Move all buffer local variables on the top to
	avoid byte-compile warnings.
	(w3m-form-parse-and-fontify): Set `w3m-form-use-textarea-backup-p'
	to nil.
	(w3m-form-input-textarea-save): Use
	`w3m-form-use-textarea-backup-p' instead of
	`w3m-form-use-textarea-backup'.